# cryptoshot

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
cryptoshot/: __init__.py  __main__.py  config.py  cryptoshot.py  exceptions.py  logger.py  types.py  utils.py
cryptoshot/apis/: __init__.py  coinapi.py  interfaces.py  kraken.py  requests.py
cryptoshot/services/: __init__.py  constants.py  exceptions.py  interfaces.py  types.py  utils.py
cryptoshot/services/apis/: avax_network.py  beaconchain.py  coinapi.py  coingecko.py  cryptocompare.py  exceptions.py  interfaces.py  kraken.py  requests.py  requestutils.py  routescan.py
tests/: test_avax_network_api.py
