[tool.poetry]
name = "cryptoshot"
version = "0.1.0"
license = "GPLv3"
description = "Retrieve cryptocurrency balances and values at a specific point in time"
authors = ["Ross <git@ross.ch>"]
readme = "README.md"

[project.scripts]
cryptoshot = "cryptoshot.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rich = "^13.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
