[project]
name = "cryptoshot"
version = "0.1.0"
description = "Retrieve cryptocurrency balances and values at a specific point in time"
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests (>=2.32.3,<3.0.0)", "rich (>=14.0.0,<15.0.0)"]

[tool.poetry]

[tool.poetry.scripts]
cryptoshot = "cryptoshot.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.10"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.isort]
line_length = 100
