[project]
name = "cryptoshot"
version = "0.1.0"
description = "Retrieve cryptocurrency balances and values at a specific point in time"
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.3",
  "rich>=14.0.0",
]

[project.scripts]
cryptoshot = "cryptoshot.__main__:main"

[dependency-groups]
# Development-only dependencies
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.isort]
line_length = 100
